--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imad Khan | Backend Developer</title>
-    <meta
-      name="description"
+    <meta name="description"
       content="Backend developer specializing in scalable systems, API design, and distributed architecture." />
     <meta name="author" content="Imad Khan" />
     <meta property="og:title" content="Imad Khan| Backend Developer" />
-    <meta
-      property="og:description"
+    <meta property="og:description"
       content="Backend developer specializing in scalable systems, API design, and distributed architecture." />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,6 +31,8 @@
         <a href="#testimonials" class="nav-link">Testimonials</a>
         <!-- <a href="#blogs" class="nav-link">Blogs</a> -->
         <a href="#contact" class="nav-link">Contact</a>
+        <a href="https://docs.google.com/document/d/18sElxcmZi-RzUyMCdccGvrU-6R9oWEaVA2MQH5UVWJk/edit?usp=sharing"
+          class="nav-link">Resume</a>
         <!-- <button
           class="theme-toggle"
           id="theme-toggle"
@@ -72,20 +73,11 @@
         </button> -->
       </div>
       <div class="nav-mobile">
-        <button
-          class="theme-toggle"
-          id="theme-toggle-mobile"
+        <button class="theme-toggle" id="theme-toggle-mobile"
           aria-label="Toggle theme">
-          <svg
-            id="sun-icon-mobile"
-            width="18"
-            height="18"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
+          <svg id="sun-icon-mobile" width="18" height="18" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round"
             style="display: none">
             <circle cx="12" cy="12" r="5"></circle>
             <line x1="12" y1="1" x2="12" y2="3"></line>
@@ -97,47 +89,24 @@
             <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
             <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
           </svg>
-          <svg
-            id="moon-icon-mobile"
-            width="18"
-            height="18"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round">
+          <svg id="moon-icon-mobile" width="18" height="18" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round">
             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
           </svg>
         </button>
-        <button
-          class="mobile-menu-btn"
-          id="mobile-menu-btn"
+        <button class="mobile-menu-btn" id="mobile-menu-btn"
           aria-label="Toggle menu">
-          <svg
-            id="menu-icon"
-            width="20"
-            height="20"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round">
+          <svg id="menu-icon" width="20" height="20" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round">
             <line x1="3" y1="12" x2="21" y2="12"></line>
             <line x1="3" y1="6" x2="21" y2="6"></line>
             <line x1="3" y1="18" x2="21" y2="18"></line>
           </svg>
-          <svg
-            id="close-icon"
-            width="20"
-            height="20"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
+          <svg id="close-icon" width="20" height="20" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round"
             style="display: none">
             <line x1="18" y1="6" x2="6" y2="18"></line>
             <line x1="6" y1="6" x2="18" y2="18"></line>
@@ -158,14 +127,8 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="terminal-badge">
-        <svg
-          class="icon"
-          width="16"
-          height="16"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2">
+        <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2">
           <polyline points="4 17 10 11 4 5"></polyline>
           <line x1="12" y1="19" x2="20" y2="19"></line>
         </svg>
@@ -206,13 +169,8 @@
       </div>
 
       <a href="#about" class="scroll-indicator">
-        <svg
-          width="32"
-          height="32"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2">
+        <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2">
           <polyline points="6 9 12 15 18 9"></polyline>
         </svg>
       </a>
@@ -245,14 +203,8 @@
 
           <div class="highlights-grid">
             <div class="highlight-card">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                class="text-orange">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" class="text-orange">
                 <rect x="2" y="2" width="20" height="8" rx="2" ry="2"></rect>
                 <rect x="2" y="14" width="20" height="8" rx="2" ry="2"></rect>
                 <line x1="6" y1="6" x2="6.01" y2="6"></line>
@@ -261,14 +213,8 @@
               <h3 class="font-heading">Backend Systems</h3>
             </div>
             <div class="highlight-card">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                class="text-blue">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" class="text-blue">
                 <ellipse cx="12" cy="5" rx="9" ry="3"></ellipse>
                 <path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path>
                 <path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path>
@@ -276,28 +222,16 @@
               <h3 class="font-heading">Database Design</h3>
             </div>
             <div class="highlight-card">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                class="text-green">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" class="text-green">
                 <polyline points="16 18 22 12 16 6"></polyline>
                 <polyline points="8 6 2 12 8 18"></polyline>
               </svg>
               <h3 class="font-heading">Clean Code</h3>
             </div>
             <div class="highlight-card">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                class="text-yellow">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" class="text-yellow">
                 <path d="M18 8h1a4 4 0 0 1 0 8h-1"></path>
                 <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path>
                 <line x1="6" y1="1" x2="6" y2="4"></line>
@@ -355,26 +289,22 @@
             <h3 class="font-heading">Languages</h3>
             <ul>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 TypeScript
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-orange)"></span>
                 Java
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 SQL
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-green)"></span>
                 Bash
               </li>
@@ -385,8 +315,7 @@
             <h3 class="font-heading">Frameworks/Libraries</h3>
             <ul>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-green)"></span>
                 Node.js
               </li>
@@ -395,20 +324,17 @@
                 NestJS
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 Express
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--muted-foreground)"></span>
                 Next.js
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 React
               </li>
@@ -419,26 +345,22 @@
             <h3 class="font-heading">Databases</h3>
             <ul>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 PostgreSQL
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-orange)"></span>
                 Redis
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-green)"></span>
                 MongoDB
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-yellow)"></span>
                 Elasticsearch
               </li>
@@ -449,38 +371,32 @@
             <h3 class="font-heading">Infrastructure</h3>
             <ul>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 Docker
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 Kubernetes
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-orange)"></span>
                 AWS
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-purple)"></span>
                 GitHub Actions
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-orange)"></span>
                 Git
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-yellow)"></span>
                 Linux
               </li>
@@ -495,38 +411,32 @@
                 RabbitMQ
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 gRPC
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-purple)"></span>
                 GraphQL
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-orange)"></span>
                 Jest
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-blue)"></span>
                 Prisma/TypeORM
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-orange)"></span>
                 Grafana
               </li>
               <li>
-                <span
-                  class="dot"
+                <span class="dot"
                   style="background: var(--gruvbox-green)"></span>
                 OpenAPI
               </li>
@@ -539,14 +449,11 @@
             <span class="dot red"></span>
             <span class="dot yellow"></span>
             <span class="dot green"></span>
-            <span
-              style="
+            <span style="
                 margin-left: 1rem;
                 color: var(--muted-foreground);
                 font-size: 0.75rem;
-              "
-              >~/skills</span
-            >
+              ">~/skills</span>
           </div>
           <code>
             <span class="text-green">$</span> cat
@@ -618,22 +525,14 @@
           </code>
         </div>
 
-        <a
-          href="mailto:imadk9700@gmail.com"
-          class="btn btn-primary"
-          style="
+        <a href="mailto:imadk9700@gmail.com" class="btn btn-primary" style="
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
             margin-bottom: 3rem;
           ">
-          <svg
-            width="20"
-            height="20"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2">
             <line x1="22" y1="2" x2="11" y2="13"></line>
             <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
           </svg>
@@ -641,42 +540,30 @@
         </a>
 
         <div class="social-links">
-          <a href="https://github.com/ik4y" aria-label="GitHub"
-            ><svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
+          <a href="https://github.com/ik4y" aria-label="GitHub"><svg width="24"
+              height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
               stroke-width="2">
               <path
-                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg
-          ></a>
-          <a href="https://linedin.com/in/imad-k" aria-label="LinkedIn"
-            ><svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2">
+                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+              </path>
+            </svg></a>
+          <a href="https://linedin.com/in/imad-k" aria-label="LinkedIn"><svg
+              width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2">
               <path
-                d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
+              </path>
               <rect x="2" y="9" width="4" height="12"></rect>
-              <circle cx="4" cy="4" r="2"></circle></svg
-          ></a>
-          <a href="mailto:imadk9700@gmail.com" aria-label="Email"
-            ><svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2">
+              <circle cx="4" cy="4" r="2"></circle>
+            </svg></a>
+          <a href="mailto:imadk9700@gmail.com" aria-label="Email"><svg
+              width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2">
               <path
-                d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-              <polyline points="22,6 12,13 2,6"></polyline></svg
-          ></a>
+                d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+              </path>
+              <polyline points="22,6 12,13 2,6"></polyline>
+            </svg></a>
         </div>
       </div>
     </section>
@@ -689,4 +576,5 @@
 
     <script src="./src/main.js"></script>
   </body>
+
 </html>
